// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  font-family: 'Montserrat',sans-serif;
  font-weight: 400;
  font-size: 16px;
  color: #66687d;
  margin: 0 0 16px;
  line-height: 1.8;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
}

<div
  className="c0"
>
  Hello world!
</div>
`;

exports[`it works with size 1`] = `
.c0 {
  font-family: 'Montserrat',sans-serif;
  font-weight: 400;
  font-size: 24px;
  color: #66687d;
  margin: 0 0 16px;
  line-height: 1.8;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
}

<div
  className="c0"
  size="large"
>
  Hello world!
</div>
`;

exports[`it works with weight 1`] = `
.c0 {
  font-family: 'Montserrat',sans-serif;
  font-weight: 600;
  font-size: 16px;
  color: #66687d;
  margin: 0 0 16px;
  line-height: 1.8;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
}

<div
  className="c0"
>
  Hello world!
</div>
`;
